<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/item_padding"
    android:descendantFocusability="blocksDescendants" >

    <ImageView
        android:id="@+id/picture"
        android:layout_width="@dimen/imageSize"
        android:layout_height="@dimen/imageSize"
        android:layout_weight="1"
        android:paddingRight="@dimen/picturePaddingRight"
        />

    <GridLayout
        android:id="@+id/fields"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:rowCount="3"
        android:columnCount="2"
        android:layout_weight="8"
        >

        <TextView
            android:layout_columnSpan="2"
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textAppearance="?android:textAppearanceMedium"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textAppearance="?android:textAppearanceSmall"
            android:text="@string/quantityCaption"
            android:paddingRight="@dimen/captionPaddingRight"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textAppearance="?android:textAppearanceSmall"
            android:text="@string/priceCaption"
            android:paddingRight="@dimen/captionPaddingRight"
            />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textAppearance="?android:textAppearanceSmall"
            />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textAppearance="?android:textAppearanceSmall"
            />

    </GridLayout>

    <ImageButton
        android:id="@+id/sale"
        android:backgroundTint="@color/colorAccent"
        android:tint="@color/colorWhite"
        android:src="@drawable/ic_attach_money_black_24dp"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sale_button"
          />


</LinearLayout>